# Next-Raycast

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
ci/: compile.sh  deploy.sh  toolchain-html5.cmake  toolchain-win64.cmake
include/NextEngine/: NextEngine.cpp  NextEngine.h  NextImage.cpp  NextImage.h  functions.cpp  res_path.h
src/: Camera.cpp  Camera.h  Debug.cpp  Keyboard.cpp  Keyboard.h  Map.cpp  Map.h  Mouse.h  Player.cpp  Player.h  main.cpp
src/Camera/: Camera.cpp  Camera.h  Line.h  Ray.cpp  Ray.h  RayCollision.cpp  RayCollision.h
src/Map/: Block.cpp  Block.h  Map.cpp  Map.h
